--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,14 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# Fabric Properties
-	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.18
-	yarn_mappings=1.18+build.1
-	loader_version=0.12.6
+minecraft_version=1.18.1
+yarn_mappings=1.18.1+build.2
+loader_version=0.12.11
+
+#Fabric api
+fabric_version=0.44.0+1.18
 
 # Mod Properties
 	mod_version = 1.0.0
 	maven_group = net.bingchilling
 	archives_base_name = bingchilling
-
-# Dependencies
-	fabric_version=0.43.1+1.18
